<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    tools:context="com.example.android.healthyquiz.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Question 1 -->

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_q1"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <!-- Q Radio 1 -->

        <LinearLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1">

            <RadioGroup
                android:id="@+id/question_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_60"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_radio_button" />

                <RadioButton
                    android:id="@+id/answer_30"
                    style="@style/alt_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_radio_button" />

            </RadioGroup>

        </LinearLayout>

        <!-- Question 2 -->

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1">

            <TextView
                android:id="@+id/textView_q2"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question" />

        </LinearLayout>

        <!-- Q Radio 2 -->

        <LinearLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l2">

            <RadioGroup
                android:id="@+id/question_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_igf"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_radio_button" />

                <RadioButton
                    android:id="@+id/answer_teb"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_radio_button" />

            </RadioGroup>

        </LinearLayout>

        <!-- Question 3 -->

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl2">

            <TextView
                android:id="@+id/textView_q3"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question" />

        </LinearLayout>

        <!-- Q Radio 3 -->

        <LinearLayout
            android:id="@+id/rl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l3">

            <RadioGroup
                android:id="@+id/question_group3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_guavajuice"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_radio_button" />

                <RadioButton
                    android:id="@+id/answer_beetjuice"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixth_radio_button" />


            </RadioGroup>

        </LinearLayout>

        <!-- Question 4 (Checkbox question) -->

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl3">

            <TextView
                style="@style/question_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_question" />

        </LinearLayout>

        <!-- Question 4 (Checkboxes) -->

        <LinearLayout
            android:id="@+id/chb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/l4"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/sunlight"
                style="@style/alt_chb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onCbClick"
                android:text="@string/first_checkbox_question" />

            <CheckBox
                android:id="@+id/carrot"
                style="@style/alt_chb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onCbClick"
                android:text="@string/second_checkbox_question" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chb2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/chb"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/mushrooms"
                style="@style/alt_chb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onCbClick"
                android:text="@string/third_checkbox_question" />

            <CheckBox
                android:id="@+id/oranges"
                style="@style/alt_chb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onCbClick"
                android:text="@string/fourth_checkbox_question" />

        </LinearLayout>


        <!-- Question 5 -->

        <LinearLayout
            android:id="@+id/l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chb2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_q5"
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_question" />

            <RadioGroup
                android:id="@+id/question_group5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/answer_kep"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seventh_radio_button" />

                <RadioButton
                    android:id="@+id/answer_dso"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eight_radio_button" />

                <ImageView
                    android:id="@+id/hug"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/hug" />
            </RadioGroup>

        </LinearLayout>

        <!-- Question 6 (Sound question) -->

        <LinearLayout
            android:id="@+id/sq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l6">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_question" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/soundquestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sq1">

            <EditText
                android:id="@+id/text_input"
                style="@style/question_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_berry"
                android:inputType="textCapWords"
                android:textColorHint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/soundquestion"
            android:layout_centerInParent="true"
            android:padding="10dp">

            <Button
                android:id="@+id/score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onScoreClick"
                android:text="@string/submit" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>




