<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    tools:context="com.example.android.healthyquiz.Main3Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/results_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/thanks"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanks"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yourscore"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thanks"
                    android:text="@string/yourscore" />

                <TextView
                    android:id="@+id/score_field"
                    style="@style/alt_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yourscore"
                    android:text="0/100"
                    android:textSize="48sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                style="@style/alt_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/yourscore"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                style="@style/alt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/therights"
                android:textSize="16sp" />

            <TextView
                style="@style/alt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howitworks"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/alt_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/howit"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/results_main">

            <Button
                android:id="@+id/restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="restartQuiz"
                android:text="@string/restart"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>




